<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>nuevaFoto</class>
 <widget class="QDialog" name="nuevaFoto">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>831</width>
    <height>546</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Nueva Foto</string>
  </property>
  <widget class="QWidget" name="verticalLayoutWidget">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>40</y>
     <width>160</width>
     <height>451</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
     <widget class="QLabel" name="nombre">
      <property name="text">
       <string>Nombre</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLabel" name="ano">
      <property name="text">
       <string>Ano</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLabel" name="autor">
      <property name="text">
       <string>Autor</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLabel" name="tamano">
      <property name="text">
       <string>Tamano</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLabel" name="descripcion">
      <property name="text">
       <string>Descripcion</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLabel" name="galeria">
      <property name="text">
       <string>Galeria</string>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QWidget" name="verticalLayoutWidget_2">
   <property name="geometry">
    <rect>
     <x>200</x>
     <y>20</y>
     <width>160</width>
     <height>501</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_3">
    <item>
     <widget class="QLineEdit" name="nombreText"/>
    </item>
    <item>
     <widget class="QLineEdit" name="anoText"/>
    </item>
    <item>
     <widget class="QLineEdit" name="autorText"/>
    </item>
    <item>
     <widget class="QLineEdit" name="tamanoText"/>
    </item>
    <item>
     <widget class="QLineEdit" name="descripcionText"/>
    </item>
    <item>
     <widget class="QLineEdit" name="galeriaText"/>
    </item>
   </layout>
  </widget>
  <widget class="QPushButton" name="ImagenBoton">
   <property name="geometry">
    <rect>
     <x>30</x>
     <y>510</y>
     <width>89</width>
     <height>25</height>
    </rect>
   </property>
   <property name="text">
    <string>Imagen</string>
   </property>
  </widget>
  <widget class="QLabel" name="fotolabel">
   <property name="geometry">
    <rect>
     <x>450</x>
     <y>130</y>
     <width>341</width>
     <height>291</height>
    </rect>
   </property>
   <property name="text">
    <string/>
   </property>
  </widget>
  <widget class="QPushButton" name="doneBoton">
   <property name="geometry">
    <rect>
     <x>690</x>
     <y>500</y>
     <width>89</width>
     <height>25</height>
    </rect>
   </property>
   <property name="text">
    <string>AK7</string>
   </property>
  </widget>
  <widget class="QLabel" name="label">
   <property name="geometry">
    <rect>
     <x>610</x>
     <y>230</y>
     <width>67</width>
     <height>17</height>
    </rect>
   </property>
   <property name="text">
    <string>TextLabel</string>
   </property>
  </widget>
  <widget class="QLabel" name="fotolabel_2">
   <property name="geometry">
    <rect>
     <x>460</x>
     <y>290</y>
     <width>341</width>
     <height>291</height>
    </rect>
   </property>
   <property name="text">
    <string/>
   </property>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
